kubernetes/apps/minio/minio/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: nas
    hajimari.io/group: storage
    hajimari.io/appName: MinIO
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "minio.${SECRET_DOMAIN}"
        - "s3.${SECRET_DOMAIN}"
      secretName: "minio.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port: http
    - host: s3.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port: s3
